--- a/main.tex
+++ b/main.tex
@@ -573,22 +573,30 @@ We can get a good solution with the help of pie charts. For every square we cons
 
 % ----------------------
 \section{Experimental validation}
-We will now compare our stacking algorithms, with other stacking methods which are manly used for visualization proportional symbol maps. The Lab was motivated by the visualization of the COVID-19 data. Therefore we will be using the JHU CSSE COVID-19 Data which is given in \cite{data}. The dataset is updated daily and provides data for every day since January 2020. Hence we have a plethora of data for our experiments. We will only cherry pick a view data sets, but the reader may use our application to look at the results for different dates.\\
-We will always use three features, namely the confirmed deaths, the confirmed recovered and the overall confirmed cases of a country.\\
+% ----------------------
 
-Since some country dominate the rest of the countries with regards to the number of cases, we scale logarithmically. To diversify our data sets even more we use three parameters in our data preparation: The minimum number of cases to be depicted, a maximum size $M$ of the glyphs and a scaling factor $S$. If we denote the maximal number of confirmed cases in one country by $c_{max}$, then the radius $r$ of the disc of some country with confirmed cases $c$ is given by:
+We will now compare our stacking algorithms with other stacking methods which are mainly used for visualization of proportional symbol maps. The lab was motivated by the visualization of COVID-19 data. Therefore we will be using the JHU CSSE COVID-19 Data which is given in \cite{data}. The dataset is updated daily and provides data for every day since January 2020. Hence, we have a plethora of data for our experiments.\\
+
+We will only cherry pick a few data sets as the data quality naturally varies, however, the reader may use our application to look at the results for different dates and inspect interesting data sets in detail. Further, we will always use three features, namely: (1) confirmed deaths, (2) confirmed recovered, and (3) overall confirmed cases of a country.\\
+
+Since some country dominate the rest of the countries with regards to the number of cases we scale logarithmically and add 1 to the data to avoid zero radii. To diversify our data sets even more we use three additional parameters in our data preparation: (1) the minimum number of cases to be depicted, (2) a maximum "size" $M$ of the glyphs in dependence of the glyph's type, and (3) a scaling factor $S$. If we denote the maximal number of confirmed cases in one country by $c_{max}$ then the radius $r$ of the disc of some country with confirmed cases $c$ is given by:
+
 \begin{align*}
 r=M\log\frac{c S}{c_{max}}
 \end{align*}
-Because three country (US,Brasil and India) far out-scale the other countries, $c_max$ is at some point chosen wth respect to the 4th highest number of confirmed cases.\\
+
+Because three country (US, Brasil and India) far out-scale other countries, $c_max$ is chosen with respect to the next largest case by country at some point in the data. Consequently $c_max$ is then set to the 4th highest number of confirmed cases in any given dataset.\\
 
 The algorithms we will be using for comparison are the Painter algorithm, Left-to-Right and Right-to-Left:
+
 \begin{itemize}
 \item The Painter algorithm stacks the glyphs from large to small with respect to the largest circle of the glyph. 
 \item Left-to-Right inserts the Glyphs with respect to increasing $x$ value of the glyph's center.
 \item Right-to-Left inserts the Glyphs with respect to decreasing $x$ value of the glyph's center.
 \end{itemize}
-If we use an algorithm to get optimal rotations, we will compare our stacking to the other algorithms with random rotation and with the use of our rotation algorithm. Since most of the glyphs are inherently different we will be evaluating them independently and make a objective comparison at the end.
+
+If we use an algorithm to get optimal rotations we will compare our stacking to the other algorithms with random rotation and with the use of our rotation algorithm. Since most of the glyphs are inherently different we will be evaluating them independently and make an objective comparison at the end.
+
 \subsection*{Nested Disks}
 
 \subsection*{Pie Charts}
