added used dataset

--- a/main.tex
+++ b/main.tex
@@ -633,13 +633,15 @@ MinSumStacking (rel) & 18 & 0.702 (0) & 2.189 (0) & 37.327 & 0.744 & 0.723\\
  \hline
 \end{tabular}
 \end{center}
-\caption{centered nested disks} 
+\caption{centered nested disks\\
+ date: 02.08.2020  , parameters: $M=50$, $S=500$ and $\text{minimum number of cases}=5000$  } 
 
 \end{table}
 \begin{figure}[h]
 \centering
 \includegraphics[height=7cm]{assets/MinMinAbsEval}
-\caption{pie Charts}
+\caption{MinMinStacking (Abs) for centered nested disks\\
+ date: 02.08.2020  , parameters: $M=50$, $S=500$ and $\text{minimum number of cases}=5000$  }
 \end{figure}
 
 \begin{table}[!h]
@@ -661,13 +663,15 @@ our Stacking & 0 & 2.342 & 6.283 & 75.034 & 0.859 & 0.77\\
  \hline
 \end{tabular}
 \end{center}
-\caption{nested disks (not centered)} 
+\caption{nested disks (not centered)\\
+ date: 02.08.2020  , parameters: $M=50$, $S=500$ and $\text{minimum number of cases}=5000$  } 
 \end{table}
 
 \begin{figure}[!h]
 \centering
 \includegraphics[height=7cm]{assets/HawaiianEval}
-\caption{our algorithm for nested disks (not centered)}
+\caption{our algorithm for nested disks (not centered)\\
+ date: 02.08.2020  , parameters: $M=50$, $S=500$ and $\text{minimum number of cases}=5000$  }
 \end{figure}
 
 
@@ -693,13 +697,15 @@ our Stacking & 0 & 2.342 & 6.283 & 75.034 & 0.859 & 0.77\\
  \hline
 \end{tabular}
 \end{center}
-\caption{pie charts} 
+\caption{pie charts\\
+ date: 22.08.2020  , parameters: $M=50$, $S=500$ and $\text{minimum number of cases}=5000$  } 
 
 \end{table}
 \begin{figure}[h]
 \centering
 \includegraphics[height=7cm]{assets/pieChartsEval}
-\caption{pie Charts}
+\caption{pie Charts\\
+ date: 22.08.2020  , parameters: $M=50$, $S=500$ and $\text{minimum number of cases}=5000$  }
 \end{figure}
     
 
